--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
       color: #00ffff;
     }
 
-    .search-container {
-      text-align: center;
+    .search-bar {
+      display: flex;
+      justify-content: center;
       margin-bottom: 20px;
     }
 
-    .search-container input {
+    .search-bar input {
       padding: 10px;
-      font-size: 16px;
       width: 80%;
       max-width: 400px;
-      border-radius: 5px;
+      border-radius: 8px;
       border: none;
+      font-size: 16px;
     }
 
     .anime-list {
@@ -71,40 +72,40 @@
       font-weight: bold;
       text-align: center;
     }
-
-    @media (max-width: 600px) {
-      .anime-card {
-        width: 90%;
-      }
-    }
   </style>
 </head>
 <body>
 
   <div class="main-title">Anime SG</div>
 
-  <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Buscar anime..." onkeyup="searchAnime()">
+  <div class="search-bar">
+    <input type="text" id="searchInput" onkeyup="filterAnimes()" placeholder="Buscar anime...">
   </div>
 
   <div class="anime-list" id="animeList">
-    <a href="vigilante-boku-no-hero-academia-illegals.html" class="anime-card">
+    <a href="vigilante.html" class="anime-card">
       <img src="https://i.imgur.com/WikYH8L.jpeg" alt="Vigilante">
       <div class="title">Vigilante: Boku no Hero Academia Illegals</div>
     </a>
+
     <a href="fire-force-san-no-shou.html" class="anime-card">
       <img src="https://i.imgur.com/u2o4udW.png" alt="Fire Force">
       <div class="title">Fire Force: San no Shou</div>
     </a>
+
+    <a href="kung-fu-panda-4.html" class="anime-card">
+      <img src="https://i.imgur.com/TcJLeBn.jpeg" alt="Kung Fu Panda 4">
+      <div class="title">Kung Fu Panda 4</div>
+    </a>
   </div>
 
   <script>
-    function searchAnime() {
+    function filterAnimes() {
       const input = document.getElementById("searchInput").value.toLowerCase();
       const cards = document.querySelectorAll(".anime-card");
 
       cards.forEach(card => {
-        const title = card.querySelector(".title").textContent.toLowerCase();
+        const title = card.querySelector(".title").innerText.toLowerCase();
         card.style.display = title.includes(input) ? "block" : "none";
       });
     }
